--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="header">
     <div class="container">
         <nav>
-            <img src="images/LOGO.jpg" class="logo">
+            <img src="./images/LOGO.jpg" class="logo">
             <ul id="sidemenu">
                 <li><a href="#header">HOME</a></li>
                  <li><a href="#about">ABOUT</a></li>
@@ -101,7 +101,7 @@
         <h1 class="sub-title">WORK</h1>
         <div class="work-list">
             <div class="work">
-                <img src="images/Male-Designer.jpg">
+                <img src="./images/graphic artist 1.webp">
                 <div class="layer">
                     <h3>
                          Graphic Designer
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images/graphic artist.jpg">
+                <img src="./images/Male-Designer.jpg" alt="graphic">
                <div class="layer">
                 <h3>
                     Graphic Designer
